--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -1,4 +1,7 @@
-$medium-color: rgba(0,0,0, 0.5)
-$dark-color: rgba(0,0,0, 0.75)
-$black: #000000
-$light-color: #ffffff
+$main-color: #f31f79
+$background-color: #f7fafc
+$border-color: #eeeeee
+$text-color: #777777
+$dark-text-color: #222222
+$light-text-color: #ffffff
+$label-color: #aaaaaa
