--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -5,7 +5,7 @@
   background: url(../img/header/iPhones.png), linear-gradient(to right, #fd712c, #f21780)
   background-repeat: no-repeat
   background-position: center right
-  color: $light-color
+  color: $light-text-color
   &__logo 
     height: 40px
     width: 128px
@@ -17,7 +17,7 @@
     display: flex
     &__item 
       a 
-        color: $light-color
+        color: $light-text-color
         padding: 12px 30px
   &-hero
     position: absolute
