--- a/src/sass/blocks/_hero.sass
+++ b/src/sass/blocks/_hero.sass
@@ -3,6 +3,7 @@
     font-size: 54px 
     font-weight: 600
     margin-bottom: 23px
+    color: $light-text-color
   &__subtitle 
     font-weight: 300
     margin-bottom: 24px
@@ -15,6 +16,7 @@
   &__button
     padding: 13px 40px
     margin-top: 20px
-    color: $black
-    background-color: $light-color
+    color: $dark-text-color
+    background-color: $light-text-color
     border-radius: 20px
+    font-weight: 500
