--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,3 +6,13 @@
 @import 'blocks/header'
 // Импорт стилей hero
 @import 'blocks/hero'
+// Импорт стилей блока с преимуществами
+@import 'blocks/features'
+// Импорт стилей блока Dont leave
+@import 'blocks/support'
+// Импорт стилей со слайдером скриншотов
+@import 'blocks/screenshots'
+// Импорт стилей с блоком тарифов
+@import 'blocks/package'
+// Импорт стилей блока с отзывами
+@import 'blocks/feedback'
