--- a/src/sass/blocks/_support.sass
+++ b/src/sass/blocks/_support.sass
@@ -1,7 +1,13 @@
 .support 
-  display: flex
   color: $text-color
-  &-wrap 
+  &-wrap
+    background: url(../img/support/iPhone_mini.png) left center no-repeat
+    background-size: contain
+    display: flex
+    justify-content: flex-end
+    padding-bottom: 120px
+  &-content 
+    padding: 55px 0
     max-width: 50%
   &__title
     margin-bottom: 23px
