--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,9 @@
 @import 'normalize'
 @import 'colors'
 @import 'interface'
+@import 'slick'
+@import 'slick-theme'
+
 
 // Импорт стилей шапки сайта
 @import 'blocks/header'
