--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -402,6 +403,21 @@ a {
   font-size: 24px;
 }
 
+.arrows__left, .arrows__right {
+  width: 40px;
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+}
+
 @media (min-width: 992px) {
   .header-list__item a:hover {
     background-color: #ffffff;
@@ -439,6 +455,403 @@ a {
   .package-card__button:active {
     -webkit-box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+  }
+  .arrows__left:hover, .arrows__right:hover {
+    cursor: pointer;
+    background: -webkit-gradient(linear, left top, right top, from(#fd712c), to(#f21780));
+    background: linear-gradient(to right, #fd712c, #f21780);
+    color: #ffffff;
+  }
+  .arrows__left:active, .arrows__right:active {
+    border: 3px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+  }
+}
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+.slick-list:focus {
+  outline: none;
+}
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand;
+}
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: '';
+}
+
+.slick-track:after {
+  clear: both;
+}
+
+.slick-loading .slick-track {
+  visibility: hidden;
+}
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px;
+}
+
+[dir='rtl'] .slick-slide {
+  float: right;
+}
+
+.slick-slide img {
+  display: block;
+}
+
+.slick-slide.slick-loading img {
+  display: none;
+}
+
+.slick-slide.dragging img {
+  pointer-events: none;
+}
+
+.slick-initialized .slick-slide {
+  display: block;
+}
+
+.slick-loading .slick-slide {
+  visibility: hidden;
+}
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent;
+}
+
+.slick-arrow.slick-hidden {
+  display: none;
+}
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url("./ajax-loader.gif") center center no-repeat;
+}
+
+/* Icons */
+@font-face {
+  font-family: 'slick';
+  font-weight: normal;
+  font-style: normal;
+  src: url("./fonts/slick.eot");
+  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
+}
+
+/* Arrows */
+.slick-prev,
+.slick-next {
+  font-size: 0;
+  line-height: 0;
+  position: absolute;
+  top: 50%;
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  cursor: pointer;
+  color: transparent;
+  border: none;
+  outline: none;
+  background: transparent;
+}
+
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  color: transparent;
+  outline: none;
+  background: transparent;
+}
+
+.slick-prev:hover:before,
+.slick-prev:focus:before,
+.slick-next:hover:before,
+.slick-next:focus:before {
+  opacity: 1;
+}
+
+.slick-prev.slick-disabled:before,
+.slick-next.slick-disabled:before {
+  opacity: .25;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-family: 'slick';
+  font-size: 20px;
+  line-height: 1;
+  opacity: .75;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-prev {
+  left: -25px;
+}
+
+[dir='rtl'] .slick-prev {
+  right: -25px;
+  left: auto;
+}
+
+.slick-prev:before {
+  content: '←';
+}
+
+[dir='rtl'] .slick-prev:before {
+  content: '→';
+}
+
+.slick-next {
+  right: -25px;
+}
+
+[dir='rtl'] .slick-next {
+  right: auto;
+  left: -25px;
+}
+
+.slick-next:before {
+  content: '→';
+}
+
+[dir='rtl'] .slick-next:before {
+  content: '←';
+}
+
+/* Dots */
+.slick-dots {
+  position: absolute;
+  bottom: 0px;
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.slick-dots li {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 4px;
+  margin: 0 10px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.slick-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 60px;
+  height: 4px;
+  padding: 10px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  outline: none;
+  background: transparent;
+}
+
+.slick-dots li button:hover,
+.slick-dots li button:focus {
+  outline: none;
+}
+
+.slick-dots li button:hover:before,
+.slick-dots li button:focus:before {
+  opacity: 1;
+}
+
+.slick-dots li button:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #FFFFFF;
+  opacity: 0.6;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.slick-dots li.slick-active button:before {
+  opacity: 1;
+  background-color: #CC1E2C;
+}
+
+@media (max-width: 768px) {
+  .slick-dots li {
+    width: 50px;
+    height: 3px;
+    margin: 0 3px;
+  }
+  .slick-dots li button {
+    width: 50px;
+    height: 3px;
+  }
+  .slick-dots li button:before {
+    width: 50px;
+    height: 3px;
+  }
+}
+
+/* BRAND Dots */
+.brand-dots {
+  position: absolute;
+  bottom: -5px;
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+.brand-dots li {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 4px;
+  margin: 0 10px;
+  padding: 0;
+  cursor: pointer;
+}
+
+.brand-dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 60px;
+  height: 4px;
+  padding: 10px;
+  cursor: pointer;
+  color: transparent;
+  border: 0;
+  outline: none;
+  background: transparent;
+}
+
+.brand-dots li button:hover,
+.brand-dots li button:focus {
+  outline: none;
+}
+
+.brand-dots li button:hover:before,
+.brand-dots li button:focus:before {
+  opacity: 1;
+}
+
+.brand-dots li button:before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #9D9C9C;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.brand-dots li.slick-active button:before {
+  opacity: 1;
+  background-color: #CC1E2C;
+}
+
+@media (max-width: 768px) {
+  .brand-dots li {
+    width: 40px;
+    height: 3px;
+    margin: 0 3px;
+  }
+  .brand-dots li button {
+    width: 40px;
+    height: 3px;
+  }
+  .brand-dots li button:before {
+    width: 40px;
+    height: 3px;
+    margin-left: -10px;
+  }
+}
+
+@media (max-width: 400px) {
+  .brand-dots li {
+    width: 35px;
+    height: 3px;
+    margin: 0 3px;
+  }
+  .brand-dots li button {
+    width: 35px;
+    height: 3px;
+  }
+  .brand-dots li button:before {
+    width: 35px;
+    height: 3px;
+    margin-left: -10px;
   }
 }
 
@@ -559,13 +972,23 @@ a {
 }
 
 .support {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   color: #777777;
 }
 
 .support-wrap {
+  background: url(../img/support/iPhone_mini.png) left center no-repeat;
+  background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-bottom: 120px;
+}
+
+.support-content {
+  padding: 55px 0;
   max-width: 50%;
 }
 
@@ -762,7 +1185,39 @@ a {
   font-weight: 500;
 }
 
+.feedback {
+  padding-bottom: 120px;
+}
+
 .feedback-wrap {
+  position: relative;
+}
+
+.feedback__title {
+  margin-bottom: 23px;
+  text-align: center;
+}
+
+.feedback__subtitle {
+  display: block;
+  max-width: 656px;
+  text-align: center;
+  line-height: 1.71;
+  margin: auto;
+  margin-bottom: 80px;
+}
+
+.feedback-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  outline: none;
+}
+
+.feedback-card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -770,22 +1225,62 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  max-width: 30%;
+  background-color: #f7fafc;
+  padding: 40px;
+  outline: none;
+}
+
+.feedback__text {
+  margin: 0;
+  margin-bottom: 29px;
+  line-height: 1.71;
+}
+
+.feedback__author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.feedback__title {
-  margin-bottom: 23px;
+.feedback__photo {
+  margin-right: 20px;
 }
 
-.feedback__subtitle {
-  max-width: 656px;
-  text-align: center;
-  line-height: 1.71;
-  margin-bottom: 80px;
+.feedback__about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.feedback__name {
+  font-family: 'Dosis', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  color: #222222;
+  margin-bottom: 11px;
+}
+
+.feedback__os {
+  font-weight: 300;
+}
+
+.feedback__arrows_left {
+  position: absolute;
+  top: 65%;
+  left: -50px;
+}
+
+.feedback__arrows_right {
+  position: absolute;
+  top: 65%;
+  right: -50px;
 }
 /*# sourceMappingURL=style.css.map */
