footer. video. download buttons

--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -1,4 +1,6 @@
 $main-color: #f31f79
+$gradient-color-1: #fd712c
+$gradient-color-2: #f21780
 $background-color: #f7fafc
 $border-color: #eeeeee
 $text-color: #777777
