--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -2,7 +2,7 @@
   position: relative
   padding-top: 30px
   height: 800px
-  background: url(../img/header/iPhones.png), linear-gradient(to right, #fd712c, #f21780)
+  background: url(../img/header/iPhones.png), linear-gradient(to right, $gradient-color-1, $gradient-color-2)
   background-repeat: no-repeat
   background-position: center right
   color: $light-text-color
