--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,8 +14,14 @@
 // Импорт стилей блока Dont leave
 @import 'blocks/support'
 // Импорт стилей со слайдером скриншотов
-@import 'blocks/screenshots'
+@import 'blocks/portfolio'
 // Импорт стилей с блоком тарифов
 @import 'blocks/package'
+// Импорт стилей блока с видео
+@import 'blocks/video'
 // Импорт стилей блока с отзывами
 @import 'blocks/feedback'
+// Импорт стилей со скачиванием приложений
+@import 'blocks/download'
+// Импорт стилей подвала сайта
+@import 'blocks/footer'
