--- a/src/css/style.css
+++ b/src/css/style.css
@@ -404,6 +404,8 @@ a {
 }
 
 .arrows__left, .arrows__right {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 40px;
   height: 40px;
   display: -webkit-box;
@@ -416,6 +418,8 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
   border-radius: 50%;
+  -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 @media (min-width: 992px) {
@@ -463,8 +467,26 @@ a {
     color: #ffffff;
   }
   .arrows__left:active, .arrows__right:active {
-    border: 3px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
+    -webkit-box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.1);
+  }
+  .download-button:hover {
+    cursor: pointer;
+  }
+  .download-button:hover .download__icon {
+    background: -webkit-gradient(linear, left top, right top, from(#fd712c), to(#f21780));
+    background: linear-gradient(to right, #fd712c, #f21780);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: -3px 0 rgba(0, 0, 0, 0.1), 0 3px rgba(0, 0, 0, 0.1), 3px 0 rgba(0, 0, 0, 0.1), 0 -3px rgba(0, 0, 0, 0.1);
+  }
+  .download-button:hover .download__icon i {
+    display: inline;
+  }
+  .footer-social-list li a:hover {
+    cursor: pointer;
+    color: #f31f79;
   }
 }
 
@@ -739,6 +761,12 @@ a {
   background-color: #CC1E2C;
 }
 
+.slick-center {
+  -webkit-box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.1);
+  background-color: #ffffff !important;
+}
+
 @media (max-width: 768px) {
   .slick-dots li {
     width: 50px;
@@ -752,106 +780,6 @@ a {
   .slick-dots li button:before {
     width: 50px;
     height: 3px;
-  }
-}
-
-/* BRAND Dots */
-.brand-dots {
-  position: absolute;
-  bottom: -5px;
-  display: block;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-align: center;
-}
-
-.brand-dots li {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 4px;
-  margin: 0 10px;
-  padding: 0;
-  cursor: pointer;
-}
-
-.brand-dots li button {
-  font-size: 0;
-  line-height: 0;
-  display: block;
-  width: 60px;
-  height: 4px;
-  padding: 10px;
-  cursor: pointer;
-  color: transparent;
-  border: 0;
-  outline: none;
-  background: transparent;
-}
-
-.brand-dots li button:hover,
-.brand-dots li button:focus {
-  outline: none;
-}
-
-.brand-dots li button:hover:before,
-.brand-dots li button:focus:before {
-  opacity: 1;
-}
-
-.brand-dots li button:before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  z-index: 1;
-  display: block;
-  width: 60px;
-  height: 4px;
-  background-color: #9D9C9C;
-  -webkit-transition: 0.2s;
-  transition: 0.2s;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.brand-dots li.slick-active button:before {
-  opacity: 1;
-  background-color: #CC1E2C;
-}
-
-@media (max-width: 768px) {
-  .brand-dots li {
-    width: 40px;
-    height: 3px;
-    margin: 0 3px;
-  }
-  .brand-dots li button {
-    width: 40px;
-    height: 3px;
-  }
-  .brand-dots li button:before {
-    width: 40px;
-    height: 3px;
-    margin-left: -10px;
-  }
-}
-
-@media (max-width: 400px) {
-  .brand-dots li {
-    width: 35px;
-    height: 3px;
-    margin: 0 3px;
-  }
-  .brand-dots li button {
-    width: 35px;
-    height: 3px;
-  }
-  .brand-dots li button:before {
-    width: 35px;
-    height: 3px;
-    margin-left: -10px;
   }
 }
 
@@ -1018,11 +946,11 @@ a {
   color: #222222;
 }
 
-.screenshots {
+.portfolio {
   background-color: #f7fafc;
 }
 
-.screenshots-wrap {
+.portfolio-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1038,11 +966,11 @@ a {
           align-items: center;
 }
 
-.screenshots__title {
+.portfolio__title {
   margin-bottom: 31px;
 }
 
-.screenshots__subtitle {
+.portfolio__subtitle {
   max-width: 656px;
   text-align: center;
   line-height: 1.71;
@@ -1100,7 +1028,7 @@ a {
   width: 262px;
   background-color: #f7fafc;
   margin-right: 30px;
-  padding-bottom: 60px;
+  padding-bottom: 40px;
 }
 
 .package-card:last-child {
@@ -1119,30 +1047,28 @@ a {
   width: 100%;
   text-align: center;
   padding-top: 30px;
-  padding-bottom: 53px;
+  padding-bottom: 35px;
   position: relative;
-}
-
-.package-card__price:after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 40px;
-  width: 131px;
-  background: -webkit-gradient(linear, right top, left bottom, color-stop(50%, transparent), color-stop(50%, #f7fafc)) no-repeat;
-  background: linear-gradient(to left bottom, transparent 50%, #f7fafc 50%) no-repeat;
 }
 
 .package-card__price:before {
   content: '';
   position: absolute;
-  right: 0;
-  bottom: 0;
-  height: 40px;
-  width: 131px;
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, transparent), color-stop(50%, #f7fafc)) no-repeat;
-  background: linear-gradient(to right bottom, transparent 50%, #f7fafc 50%) no-repeat;
+  top: 80px;
+  left: -0.5px;
+  border-style: solid;
+  border-width: 40px 0 0 133px;
+  border-color: transparent transparent transparent #f7fafc;
+}
+
+.package-card__price:after {
+  content: '';
+  top: 80px;
+  right: -0.6px;
+  position: absolute;
+  border-style: solid;
+  border-width: 0 0 40px 133px;
+  border-color: transparent transparent #f7fafc transparent;
 }
 
 .package-card-list {
@@ -1157,7 +1083,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   width: 80%;
-  padding-top: 70px;
+  padding-top: 19px;
 }
 
 .package-card-list__item {
@@ -1169,7 +1095,7 @@ a {
 
 .package-card-list__item:last-child {
   border-bottom: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .package-card__label {
@@ -1185,8 +1111,73 @@ a {
   font-weight: 500;
 }
 
+.video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  height: 400px;
+}
+
+.video img {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  z-index: 20;
+  cursor: pointer;
+}
+
+.video-play {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  background: -webkit-gradient(linear, left top, right top, from(#fd712c), to(#f21780));
+  background: linear-gradient(to right, #fd712c, #f21780);
+  border-radius: 50%;
+  color: #ffffff;
+  width: 75px;
+  height: 75px;
+  z-index: 30;
+  cursor: pointer;
+  font-size: 24px;
+  padding-left: 5px;
+}
+
+.video-play iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* image poster clicked, player class added using js */
+.video.player img {
+  display: none;
+}
+
+.video.player:after {
+  display: none;
+}
+
 .feedback {
-  padding-bottom: 120px;
+  padding-bottom: 90px;
 }
 
 .feedback-wrap {
@@ -1208,12 +1199,6 @@ a {
 }
 
 .feedback-slider {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   outline: none;
 }
 
@@ -1225,10 +1210,13 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 30%;
+  max-width: 360px;
   background-color: #f7fafc;
   padding: 40px;
+  padding-right: 20px;
   outline: none;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .feedback__text {
@@ -1272,15 +1260,135 @@ a {
   font-weight: 300;
 }
 
-.feedback__arrows_left {
+.feedback__arrows_left, .feedback__arrows_right {
   position: absolute;
   top: 65%;
-  left: -50px;
+}
+
+.feedback__arrows_left {
+  left: -90px;
 }
 
 .feedback__arrows_right {
-  position: absolute;
-  top: 65%;
-  right: -50px;
+  right: -90px;
+}
+
+.download {
+  background: -webkit-gradient(linear, left top, right top, from(#fd712c), to(#f21780));
+  background: linear-gradient(to right, #fd712c, #f21780);
+  padding-bottom: 120px;
+}
+
+.download__title {
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.download__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.download-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 360px;
+  background-color: #ffffff;
+  padding: 27px 33px;
+  -webkit-box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.07);
+          box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.07);
+}
+
+.download-button__title {
+  font-size: 30px;
+  font-weight: 600;
+  color: #222222;
+  margin-bottom: 14px;
+}
+
+.download__icon {
+  width: 50px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 48px;
+  color: #777777;
+  font-size: 56px;
+  text-shadow: -3px 0 rgba(0, 0, 0, 0.1), 0 3px rgba(0, 0, 0, 0.1), 3px 0 rgba(0, 0, 0, 0.1), 0 -3px rgba(0, 0, 0, 0.1);
+}
+
+.download-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.download__subtitle {
+  color: #777777;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #222222;
+  padding: 60px;
+  color: #ffffff;
+}
+
+.footer-social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 18px;
+}
+
+.footer-social-list li {
+  margin-right: 30px;
+}
+
+.footer-social-list li:last-child {
+  margin-right: 0;
+}
+
+.footer-social-list li a {
+  color: #ffffff;
+}
+
+.footer__copyright {
+  margin-top: 30px;
 }
 /*# sourceMappingURL=style.css.map */
