--- a/src/sass/blocks/_package.sass
+++ b/src/sass/blocks/_package.sass
@@ -26,7 +26,7 @@
     width: 262px
     background-color: $background-color
     margin-right: 30px
-    padding-bottom: 60px
+    padding-bottom: 40px
     &:last-child
       margin-right: 0
     &__title 
@@ -39,30 +39,47 @@
       width: 100%
       text-align: center
       padding-top: 30px
-      padding-bottom: 53px
+      // padding-bottom: 53px
+      padding-bottom: 35px
       position: relative
-      &:after 
+      &:before
         content: ''
         position: absolute
-        left: 0
-        bottom: 0
-        height: 40px 
-        width: 131px
-        background: linear-gradient(to left bottom, transparent 50%, $background-color 50%) no-repeat
-      &:before 
+        top: 80px
+        left: -0.5px
+        border-style: solid
+        border-width: 40px 0 0 133px
+        border-color: transparent transparent transparent $background-color
+      &:after
         content: ''
+        top: 80px
+        right: -0.6px
         position: absolute
-        right: 0
-        bottom: 0
-        height: 40px 
-        width: 131px
-        background: linear-gradient(to right bottom, transparent 50%, $background-color 50%) no-repeat
+        border-style: solid
+        border-width: 0 0 40px 133px
+        border-color: transparent transparent $background-color transparent
+      // &:after 
+      //   content: ''
+      //   position: absolute
+      //   left: 0
+      //   bottom: 0
+      //   height: 40px 
+      //   width: 131px
+      //   background: linear-gradient(to left bottom, transparent 50%, $background-color 50%) no-repeat
+      // &:before 
+      //   content: ''
+      //   position: absolute
+      //   right: 0
+      //   bottom: 0
+      //   height: 40px 
+      //   width: 131px
+      //   background: linear-gradient(to right bottom, transparent 50%, $background-color 50%) no-repeat
     &-list 
       display: flex
       flex-direction: column
       align-items: center
       width: 80%
-      padding-top: 70px
+      padding-top: 19px
       &__item 
         border-bottom: 1px dashed $border-color
         text-align: center
@@ -70,7 +87,7 @@
         width: 100%
         &:last-child
           border-bottom: 0px
-          margin-bottom: 50px
+          margin-bottom: 40px
     &__label 
       margin-bottom: 14px
       color: $label-color
