--- a/src/sass/blocks/_support.sass
+++ b/src/sass/blocks/_support.sass
@@ -1,8 +1,8 @@
 .support 
   color: $text-color
+  background: url(../img/support/iPhone.png) left center no-repeat
+  background-size: contain
   &-wrap
-    background: url(../img/support/iPhone_mini.png) left center no-repeat
-    background-size: contain
     display: flex
     justify-content: flex-end
     padding-bottom: 120px
