--- a/src/sass/blocks/_download.sass
+++ b/src/sass/blocks/_download.sass
@@ -1,38 +1,44 @@
 .download 
   background: linear-gradient(to right, $gradient-color-1, $gradient-color-2)
   padding-bottom: 120px
+
   &__title 
     color: $light-text-color
     text-align: center
     margin-bottom: 80px
+
   &__buttons
     display: flex
     justify-content: space-between
+    
   &-button 
     display: flex
     align-items: center
     width: 360px
     background-color: $light-text-color
-    padding: 27px 33px
     box-shadow: 0px 10px 30px 0 rgba(0, 0, 0, 0.07)
     &__title 
       font-size: 30px
       font-weight: 600
       color: $dark-text-color
       margin-bottom: 14px
+
   &__icon 
-    width: 50px
-    height: 50px 
+    width: 115px
+    height: 115px
     display: flex
     justify-content: center
     align-items: center
-    margin-right: 48px
     color: $text-color
+    background-color: $background-color
+    border-radius: 3px
     font-size: 56px
     text-shadow: -3px 0 rgba(0, 0, 0, 0.1), 0 3px rgba(0, 0, 0, 0.1), 3px 0 rgba(0, 0, 0, 0.1), 0 -3px rgba(0, 0, 0, 0.1)
-    // text-shadow: 0 0 3px rgba(0, 0, 0, 0.1)
+  
   &-content 
     display: flex
     flex-direction: column
+    padding: 28px 19px
+    
   &__subtitle 
     color: $text-color
